# newrelic-opencensus-exporter-python

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.rst  THIRD_PARTY_NOTICES.rst  api.html  azure-pipelines.yml  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  tests.yml
_modules/: index.html
_modules/opencensus_ext_newrelic/: stats.html  trace.html
_sources/: api.rst.txt  index.rst.txt  quickstart.rst.txt
docs/: api.rst  conf.py  index.rst  quickstart.rst
src/ocnewrelic/: __init__.py  exporter.py  stats.py  trace.py
src/opencensus_ext_newrelic/: __init__.py  stats.py  trace.py
tests/: conftest.py  test_stats.py  test_trace.py
