[metadata]
name = ocnewrelic
description = New Relic OpenCensus Exporter
long_description = file: README.rst
long_description_content_type = text/x-rst
author = New Relic
author_email = support@newrelic.com
url = https://github.com/newrelic/python-opencensus-exporter
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Topic :: System :: Monitoring
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
setup_requires =
    setuptools_scm
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    newrelic-sdk @ git+ssh://git@github.com/newrelic/python-telemetry.git
    opencensus

[options.packages.find]
where=src

[bdist_wheel]
universal = 1
